<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movieadd.MovieAddFragment">

    <EditText
        android:id="@+id/etMovieTitleAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:hint="@string/movie_name_add"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMovieSinopseAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/movie_sinopse_add"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/etMovieTitleAdd"
        app:layout_constraintStart_toStartOf="@+id/etMovieTitleAdd"
        app:layout_constraintTop_toBottomOf="@+id/etMovieTitleAdd" />

    <EditText
        android:id="@+id/etMovieDirectorNameAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/movie_director_add"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/etMovieSinopseAdd"
        app:layout_constraintStart_toStartOf="@+id/etMovieSinopseAdd"
        app:layout_constraintTop_toBottomOf="@+id/etMovieSinopseAdd" />

    <EditText
        android:id="@+id/etMovieDirectorInfoAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/movie_director_info_add"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/etMovieDirectorNameAdd"
        app:layout_constraintStart_toStartOf="@+id/etMovieDirectorNameAdd"
        app:layout_constraintTop_toBottomOf="@+id/etMovieDirectorNameAdd" />

    <Button
        android:id="@+id/bvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/save_movie"
        app:layout_constraintEnd_toEndOf="@+id/etMovieDirectorInfoAdd"
        app:layout_constraintStart_toStartOf="@+id/etMovieDirectorInfoAdd"
        app:layout_constraintTop_toBottomOf="@+id/etMovieDirectorInfoAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>